Fix HTML encoding issues and update birthday messages

--- a/index.html
+++ b/index.html
@@ -134,22 +134,22 @@ const stories = [
   { 
     icon: "🎂", 
     font: "'Cherry Bomb One', cursive", 
-    text: "HAPPY BIRTHDAY!! \n\nAnother year of being absolutely awesome. I'm so glad you exist! ✨" 
+    text: "Happy b'day my love Guggu, the prettiest girl ever, pta nhi ye padhoge to kya feel kroge tm...hope padhkr tmhare face pr smile aa jaye...r tm khush ho jao... ✨" 
   },
   { 
     icon: "🎈", 
     font: "'Indie Flower', cursive", 
-    text: "I was going to get you a massive gift, but then I realized... you already have ME. 😉\n\n(You're welcome)" 
+    text: "Socha tmhe koi achcha sa gift doon...pr avi mere jaisa unemployed ladka de hi kya skta h...sach bolu to main tmhe gift m apna lifetime pyar r care dena chahta hoon...gift to tmhe sb denge...pr tm mujhe rkh lo as a gift...chahe dukh ho ya sukh always sath dunga...kuch v hoga tmhe khush rkhne ki shiddat se kosis krunga... 😉" 
   },
   { 
     icon: "🌟", 
     font: "'Caveat', cursive", 
-    text: "May your day be filled with cake, laughter, and everything that makes you smile. \n\nYou deserve the world" 
+    text: "Tmhe dekhkr hi pyar ho gya tha...pr janta nhi tha ki itni pyari dikhne wali ladki itni strong h...jo itna kuch akele face kr rhi h...sach m tm great ho...r tmhe apni life m pana...kisi goddess ko pane se km nhi...agr bura n mano to meri bn jao...tbh tmhari jaisi nhi mil skti...perfection ka mtlb ho tm...tm apna wishlist bnakr rkho main sb pura krunga... \n\nYou deserve the world" 
   },
   { 
     icon: "🥳", 
     font: "'Dancing Script', cursive", 
-    text: "Let's make this year unforgettabl and spend more time together \n\nTime to party and celebrate YOU 🥂✨" 
+    text: "Guggu my love, mt smjhna ki b'day h to tarif kr rha...ye sb sach m dil se aa rhi h batein...tmhe khush rkhna mera dream h...tm itna kuch krte ho to main tmhara zid pura krunga...chahe tm jitna v kro...bs kvi kvi pgl meri v bt man lena...kosis krunga hr bt ek br m manne ki...janta hoon gadha hoon...dur hoon pr always tmhare pass m...kash avi 12 bje tmse bt ho pati...msg v nhi kr skta n call...bht bura lg rha h...pr hope padho to khush ho jao...once again happy b'day Guggu 🎂🎈...always with you...I love you ❤️🫂\n\n...always with you...I love you ❤️🫂🥂✨" 
   }
 ];
 
@@ -243,3 +243,4 @@ window.onresize = () => { canvas.width = window.innerWidth; canvas.height = wind
 </script>
 </body>
 </html>
+
