--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ const stories = [
   { 
     icon: "🥳", 
     font: "'Dancing Script', cursive", 
-    text: "Guggu my love, mt smjhna ki b'day h to tarif kr rha...ye sb sach m dil se aa rhi h batein...tmhe khush rkhna mera dream h...tm itna kuch krte ho to main tmhara zid pura krunga...chahe tm jitna v kro...bs kvi kvi pgl meri v bt man lena...kosis krunga hr bt ek br m manne ki...janta hoon gadha hoon...dur hoon pr always tmhare pass m...kash avi 12 bje tmse bt ho pati...msg v nhi kr skta n call...bht bura lg rha h...pr hope padho to khush ho jao...once again happy b'day Guggu 🎂🎈...always with you...I love you ❤️🫂\n\n...always with you...I love you ❤️🫂🥂✨" 
+    text: "Guggu my love, mt smjhna ki b'day h to tarif kr rha...ye sb sach m dil se aa rhi h batein...tmhe khush rkhna mera dream h...tm itna kuch krte ho to main tmhara zid pura krunga...chahe tm jitna v kro...bs kvi kvi pgl meri v bt man lena...kosis krunga hr bt ek br m manne ki...janta hoon gadha hoon...dur hoon pr always tmhare pass m...kash avi 12 bje tmse bt ho pati...msg v nhi kr skta n call...bht bura lg rha h...pr hope padho to khush ho jao...once again happy b'day Guggu 🎂🎈❤️\n\n...always with you...I love you ❤️🫂🥂✨" 
   }
 ];
 
@@ -243,6 +243,7 @@ window.onresize = () => { canvas.width = window.innerWidth; canvas.height = wind
 </script>
 </body>
 </html>
+
 
 
 
